--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <!-- Loading Screen -->
   <div id="loading-screen">
     <div class="loading-content">
-      <img src="rocell-logo.png" alt="Rocell Logo" class="logo">
-      <p>We value your feedback</p>
+      <img src="rocell.jpg" alt="Rocell Logo" class="logo">
+      <h2>We value your feedback!</h2>
     </div>
   </div>
 
